--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html, body {
 
 .logo img {
     position: relative;
-   /* left: -5vmax;*/
+    /* left: -5vmax;*/
     float: left;
     width: 290px;
     height: 70px;
@@ -40,7 +40,7 @@ html, body {
 }
 
 nav.menu-desktop {
-    top:5px;
+    top: 5px;
     float: right;
     left: calc(50vw - 152px);
     position: fixed;
@@ -58,13 +58,15 @@ nav.menu-desktop:hover {
     color: white;
 }
 
-nav.menu-desktop>ul>li>a{
+nav.menu-desktop>ul>li>a {
     color: white;
 }
 
 
+
 nav.menu-mobile {
     float: right;
+    margin-right: 10px;
     background-image: url('../images/menu.png');
     width: 40px;
     height: 40px;
@@ -75,6 +77,7 @@ nav.menu-mobile {
 }
 
 nav.menu-mobile ul {
+
     display: none;
     z-index: 99;
     position: absolute;
@@ -82,7 +85,17 @@ nav.menu-mobile ul {
     text-align: center;
     width: 100%;
     top: 60px;
-    background-color: white;
+    background-color: #ffffff;;
+}
+
+nav.menu-mobile ul li:hover {
+
+    background-color: #292d30;
+}
+
+nav.menu-mobile>ul>li:hover>a {
+
+    color: white;
 }
 
 nav.menu-mobile ul li {
@@ -114,6 +127,8 @@ nav.menu-mobile ul li {
     width: calc(100% / 6);
 }
 
+
+
 .mosaico-img {
     width: 100%;
     height: 180px;
@@ -133,6 +148,7 @@ section.servicos .container {
     text-align: center;
     height: 40vh;
 }
+
 section.servicos .box-servico {
     background-image: url(../images/icone_dente.png);
     background-repeat: no-repeat;
@@ -307,7 +323,7 @@ section.depoimentos h2 {
 .mosaico-social {
     float: left;
     width: 100%;
-    background-color: rgb(255,0,50);
+    background-color: rgb(255, 0, 50);
 }
 
 .img-mosaico-single-social {
@@ -317,39 +333,41 @@ section.depoimentos h2 {
     background-color: rgb(25, 25, 63);
     border: 6px solid white;
     transition-duration: 1.5s;
-    transition-delay:0.5s ;
+    transition-delay: 0.5s;
 }
 
-.img-mosaico-single-social:nth-child(1){
+.img-mosaico-single-social:nth-child(1) {
     background-image: url(../images/M1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.img-mosaico-single-social:nth-child(3){
+.img-mosaico-single-social:nth-child(3) {
     background-image: url(../images/M2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-}/*
+}
+
+/*
 .img-mosaico-single-social:nth-child(4){
     background-image: url(../images/M3.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
 }*/
 
-.img-mosaico-single-social:nth-child(5){
+.img-mosaico-single-social:nth-child(5) {
     background-image: url(../images/M4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.img-mosaico-single-social:nth-child(9){
+.img-mosaico-single-social:nth-child(9) {
     background-image: url(../images/M5.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.img-mosaico-single-social:nth-child(7){
+.img-mosaico-single-social:nth-child(7) {
     background-image: url(../images/M6.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -506,7 +524,19 @@ footer .footer-block {
         flex-direction: column;
         height: 100%;
     }
-    
+
+    div.menuP {
+        top: 0;
+        position: fixed;
+        z-index: 99;
+        background-color: #ffffff;
+        border-bottom: 2px solid rgb(155, 155, 155);
+    }
+
+    section.mosaico {
+        margin-top: 70px;
+
+    }
 
     .mosaico-single {
         float: left;
